Blacklisting of method names coming from std library.

BUG=672902

Review-Url: https://codereview.chromium.org/2601063002
Cr-Commit-Position: refs/heads/master@{#440879}

Former-commit-id: fa323b77ef5fbe07d35990c36eb3ad84eece2d5f