tools/clang/rewrite_to_chrome_style/tests/function-templates-expected.cc
@@ -37,7 +37,7 @@ class Checked {
 };
 
 template <typename To, typename From>
-To Bitwise_cast(From from) {
+To bitwise_cast(From from) {
   static_assert(sizeof(To) == sizeof(From), "msg");
   return reinterpret_cast<To>(from);
 }
@@ -61,5 +61,5 @@ struct ArrayTraits<WTF::Checked<U, int>> {
 
 }  // namespace mojo
 
-using WTF::Bitwise_cast;
+using WTF::bitwise_cast;
 using WTF::SafeCast;
